[project]
name = "ecu"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[tool.hatch.build.targets.wheel]
packages = ["ecu"]

[tool.uv]
dev-dependencies = [
    "pytest>=8.3.2",
    "pytest-anyio>=0.0.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.6.1",
    "typos>=1.23.6",
    "pre-commit>=3.8.0",
]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
extend-select = ["I", "C", "E", "F", "W", "B"]

[tool.typos.default]
locale = "en-us"

[tool.coverage.run]
omit = ["conftest.py", "test_*.py", "*_test.py"]

[tool.pytest.ini_options]
addopts = "--capture=no --verbose --cov --cov-report=html --cov-report=xml --cov-append"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
